Update docs to Bootstrap 4.0. Include Prolific page

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -8,7 +8,7 @@
       </div>
       <div class="ml-auto col-5 license">
         &copy; {{ site.time | date: '%Y' }} <a href="http://sec.cs.ucl.ac.uk/">UCL</a>.
-        Licensed under the <a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a>.
+        The content of this website is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
       </div>
     </div>
   </div>
