--- a/docs/_includes/navbar.html
+++ b/docs/_includes/navbar.html
@@ -15,27 +15,25 @@
 
       <div class="collapse navbar-collapse" id="navbar-top">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item {% if page.url contains "/how-it-works/" %}active{% endif %}">
-            <a class="nav-link" href="{{ "/how-it-works/" | relative_url }}">How it works</a>
+          <li class="nav-item {% if page.url contains "/how-it-works.html" %}active{% endif %}">
+            <a class="nav-link" href="{{ "/how-it-works.html" | relative_url }}">How it works</a>
           </li>
           <li class="nav-item {% if page.url contains "/docs/" %}active{% endif %}">
             <a class="nav-link" href="{{ "/docs/" | relative_url }}">Documentation</a>
           </li>
-          <li class="nav-item {% if page.url contains "/about/" %}active{% endif %}">
-          <a class="nav-link" href="{{ "/about/" | relative_url }}">About</a>
+          <li class="nav-item {% if page.url contains "/about.html" %}active{% endif %}">
+          <a class="nav-link" href="{{ "/about.html" | relative_url }}">About</a>
           </li>
         </ul>
-        <form class="form-inline" id="search-form">
+        <form class="form-inline" id="search-form" action="{{ "/search.html" | relative_url }}">
           <div class="input-group">
             <!--<i class="material-icons">search</i>-->
-            <input class="form-control form-control-sm" type="text" placeholder="Search">
+            <input class="form-control form-control-sm" type="text" id="search-input" placeholder="Search" name="q">
             <button class="btn btn-secondary sr-only" type="submit">Search</button>
         </form>
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="https://app.ppd.cs.ucl.ac.uk">Log in &rarr;</a>
-          </li>
-        </ul>
+        <div class="actions">
+          <a class="btn btn-outline-light" href="https://app.ppd.cs.ucl.ac.uk">Log in</a>
+        </div>
       </div>
     </div>
   </nav>
