--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -8,7 +8,7 @@
     <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
     <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-    <link rel="stylesheet" href="{{ "/assets/app.css" | relative_url }}">
+    <link rel="stylesheet" href="{{ "/assets/site.css" | relative_url }}">
     <link rel="stylesheet" href="{{ "/assets/bootstrap.min.css" | relative_url }}">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400,400italic,500,500italic,700,700italic|Roboto+Mono:400,500,700|Material+Icons">
     <link rel="icon" href="{{ "/favicon.png" | relative_url }}">
@@ -22,8 +22,6 @@
 
     <script src="{{ "/assets/jquery-3.2.1.slim.min.js" | relative_url }}"></script>
     <script src="{{ "/assets/bootstrap.min.js" | relative_url }}"></script>
-    <script src="{{ "/assets/lunr-2.1.5.min.js" | relative_url }}"></script>
-    <script src="{{ "/assets/search.js" | relative_url }}"></script>
     {% include google_analytics.html %}
   </body>
 </html>
