Fix border issue

--- a/docs/assets/site.css
+++ b/docs/assets/site.css
@@ -86,7 +86,7 @@ nav.navbar {
 }
 
 .feature {
-  border-top: 1px solid rgba(0,0,0,.2);
+  border-bottom: 1px solid rgba(0,0,0,.2);
 }
 
 .feature-image {
@@ -204,6 +204,7 @@ nav.navbar {
 }
 
 .callout.stacked {
+  border-top: 0;
   margin-top: 0;
 }
 
