--- a/pdd/node/ucl/pdd/dashboard/app.css
+++ b/pdd/node/ucl/pdd/dashboard/app.css
@@ -91,7 +91,11 @@ h1 .pt-text-muted, h2 .pt-text-muted, h3 .pt-text-muted {
 
 .notes {
   background-color: rgba(191, 204, 214, 0.2);
-  padding: 5px;
+  padding: 10px;
   border-radius: 3px;
   margin-bottom: 10px;
+}
+
+.notes p {
+  margin: 0;
 }
