--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -9,6 +9,7 @@
     <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
     <link rel="stylesheet" href="{{ "/assets/site.css" | relative_url }}">
+    <link rel="stylesheet" href="{{ "/assets/syntax.css" | relative_url }}">
     <link rel="stylesheet" href="{{ "/assets/bootstrap.min.css" | relative_url }}">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400,400italic,500,500italic,700,700italic|Roboto+Mono:400,500,700|Material+Icons">
     <link rel="icon" href="{{ "/favicon.png" | relative_url }}">
