Add minimal privacy policy

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -6,9 +6,12 @@
           <img src="{{ "/assets/images/isense.svg" | relative_url }}" height="70" alt="i-sense" />
         </a>
       </div>
-      <div class="ml-auto col-5 license">
-        &copy; {{ site.time | date: '%Y' }} <a href="http://sec.cs.ucl.ac.uk/">UCL</a>.
-        The content of this website is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
+      <div class="ml-auto col-8 license">
+        <p>
+          &copy; {{ site.time | date: '%Y' }} <a href="http://sec.cs.ucl.ac.uk/">UCL</a>.
+          The content of this website is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
+        </p>
+        <p><a href="privacy.html">Privacy policy</a></p>
       </div>
     </div>
   </div>
